index actualizado segun requerimiento #8

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 </head>
 <body>
     <h1>Welcome SENATI Chincha</h1>
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ex esse quae totam porro officia similique vel excepturi voluptas deserunt ipsa ullam possimus, soluta perspiciatis debitis sequi quam aliquid? Dolore, unde?
+    </p>
+    <a href="#">Más información</a>
 </body>
 </html>
